--- a/home/spoof.ru/www/Contacts.html
+++ b/home/spoof.ru/www/Contacts.html
@@ -71,7 +71,7 @@ $(document).ready(function () {
 	
 	<div >
 		<p> <br> <b>+375297778899 (velcom) <br><br>  +375337778899 (mts) <br><br>  +375257778899 (life)</p>
-		<br>  <p> <b>Lienina Street, 22 </b></p>
+		<br>  <p> <b>Lienina Street, 22A </b></p>
 	</div>
 
 <footer>
